deployments/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lummo-app
  labels:
    app: lummo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lummo
  template:
    metadata:
      labels:
        app: lummo
    spec:
      containers:
        - image: chiragbhatia/lummo:latest
          name: lummo
          ports:
            - containerPort: 8000
              name: gunicorn
