deployments/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: lummo-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
  - hosts:
    - dev-domain.com # change to real domain name
    secretName: lummo-tls
  rules:
  - host: dev-domain.com
    http:
      paths:
      - backend:
          serviceName: lummo
          servicePort: 8000
